Ajout de homepage pour le déploiement sur WebDev dans package.json

--- a/package.json
+++ b/package.json
@@ -36,5 +36,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://e2196008.webdev.cmaisonneuve.qc.ca/ms-fabulous/build"
 }
